# five

./: .cursorignore  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yaml
crate/src/: lib.rs
five/: Cargo.toml
five/src/: lib.rs
five/src/analysis/: context_info.rs  errors.rs  function_description.rs  generics_info.rs  impl_block_info.rs  parameter_info.rs  property_info.rs  role.rs  trait_info.rs  type_description.rs
five/src/compile/: compiler.rs  context.rs  function_descriptor.rs  impl_block.rs  mod.rs  module.rs  role.rs  trait_info.rs
five_core/: Cargo.toml
five_core/src/: lib.rs
five_core/src/analysis/: code_analysis.rs  context_info.rs  function_description.rs  generics_info.rs  impl_block_info.rs  mod.rs  parameter_info.rs  property_info.rs  role.rs  trait_info.rs  type_description.rs
five_core/src/compile/: compiler.rs  context.rs  function_descriptor.rs  impl_block.rs  mod.rs  module.rs  role.rs  trait_info.rs
five_core/tests/: code_analysis_tests.rs
five_core/tests/data/: mod.rs
five_macro/: Cargo.toml
test/: Cargo.toml  expanded_output.rs
test/src/: account.rs  async_test.rs  data.rs  main.rs  minimal_test.rs  profile.rs  solution_explanation.md  storage.rs  supertrait_test.rs  transfer.rs  user_profile_context.rs
