[workspace]
members = [
    "five",
    "five_core",
    "test"
]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A rust crate to support DCI natively in rust"
license = "MIT"
repository = "https://github.com/yourusername/five"