[workspace]
members = [
    "five",
    "test"
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["runefs"]
description = "A rust crate to support DCI natively in rust"
license = "MIT"
repository = "https://github.com/yourusername/five"

[workspace.dependencies]
five_core = { version = "0.1.0", path = "five_core" }