[package]
name = "test"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
five = { path = "../five" }
serde_json = "1.0"
serde = "1.0"
serde_cbor = "0.11"
aes-gcm = "0.10"
rand = "0.8"
